a very basic signalR example

--- a/ServiceX/ServiceX.Web/Views/Home/ViewCount.cshtml
+++ b/ServiceX/ServiceX.Web/Views/Home/ViewCount.cshtml
@@ -2,3 +2,4 @@
 <span id="viewCounter">0</span>
 
 <script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
+<script src="~/hubs/viewhub.js"></script>
